// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render with all the props given 1`] = `
<div>
  <button
    class="sc-gsTCUz bCbYEo"
    type="danger"
  >
    <span
      class="sc-bdfBwQ hvsaTh"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button should render with default theme 1`] = `
<div>
  <button
    class="sc-gsTCUz fUCyww"
    type="primary"
  >
    <span
      class="sc-bdfBwQ ixTvTj"
    />
  </button>
</div>
`;

exports[`Button should render with not-allowed cursor when it is disabled 1`] = `
<div>
  <button
    class="sc-gsTCUz dAMnPr"
    disabled=""
    type="primary"
  >
    <span
      class="sc-bdfBwQ ixTvTj"
    >
      ClickMe
    </span>
  </button>
</div>
`;
